force-app/main/default/objects/TSMTarget__c/TSMTarget__c.object-meta.xml
<CustomObject>
    <description>To hold the target and actual for a TSM under specific Team</description>
    <label>FRSM Target</label>
    <nameField>
        <displayFormat>Target - {00000}</displayFormat>
        <label>FRSM Target No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FRSM Targets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>