force-app/main/default/objects/TSMTarget__c/fields/FX_Retail_Percent__c.field-meta.xml
<CustomField>
    <fullName>FX_Retail_Percent__c</fullName>
    <formula>IF(TSMTar_FXRetail__c!=0, (TSMTar_FXRetailActual__c/TSMTar_FXRetail__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FX Retail Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>