force-app/main/default/objects/TSMTarget__c/fields/No_Of_Working_Days__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Working_Days__c</fullName>
    <formula>CASE(MOD( TSMTar_StartDate__c - DATE(1985,6,24),7), 

0 , CASE( MOD( TSMTar_EndDate__c - TSMTar_StartDate__c,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( TSMTar_EndDate__c - TSMTar_StartDate__c,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( TSMTar_EndDate__c - TSMTar_StartDate__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( TSMTar_EndDate__c- TSMTar_StartDate__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( TSMTar_EndDate__c- TSMTar_StartDate__c,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( TSMTar_EndDate__c - TSMTar_StartDate__c,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( TSMTar_EndDate__c - TSMTar_StartDate__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( TSMTar_EndDate__c - TSMTar_StartDate__c )/7)*5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Of Working Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>