force-app/main/default/objects/TSMTarget__c/fields/TSMTar_CommPercentage__c.field-meta.xml
<CustomField>
    <fullName>TSMTar_CommPercentage__c</fullName>
    <formula>IF(TSMTar_CommTarget__c !=0, ( TSMTar_CommActual__c / TSMTar_CommTarget__c ), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commodity Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>