force-app/main/default/objects/TSMTarget__c/fields/TSMTar_CRMPercentage__c.field-meta.xml
<CustomField>
    <fullName>TSMTar_CRMPercentage__c</fullName>
    <formula>IF(TSMTar_CRMTarget__c!=0, (TSMTar_CRMActual__c / TSMTar_CRMTarget__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CRM Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>