force-app/main/default/objects/TSMTarget__c/fields/TSMTar_DefaultEvent__c.field-meta.xml
<CustomField>
    <fullName>TSMTar_DefaultEvent__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Default Event</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>