force-app/main/default/objects/TSMTarget__c/fields/TSMTar_FiscalYear__c.field-meta.xml
<CustomField>
    <fullName>TSMTar_FiscalYear__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fiscal Year</label>
    <length>6</length>
    <type>Text</type>
</CustomField>