force-app/main/default/objects/TSMTarget__c/fields/TSMTar_FXActual__c.field-meta.xml
<CustomField>
    <fullName>TSMTar_FXActual__c</fullName>
    <formula>TSMTar_FXDirectActual__c  +  TSMTar_FXIndirectActual__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FX Actual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>