force-app/main/default/objects/TSMTarget__c/fields/TSMTar_FXDirectActual__c.field-meta.xml
<CustomField>
    <fullName>TSMTar_FXDirectActual__c</fullName>
    <defaultValue>0</defaultValue>
    <label>FX Direct Actual</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>