force-app/main/default/objects/TSMTarget__c/fields/TSMTar_FXDirectPercent__c.field-meta.xml
<CustomField>
    <fullName>TSMTar_FXDirectPercent__c</fullName>
    <formula>IF(TSMTar_FXDirectTarget__c !=0, (TSMTar_FXDirectActual__c/TSMTar_FXDirectTarget__c ), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FX Direct Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>