force-app/main/default/objects/TSMTarget__c/fields/TSMTar_FXInDirectPercent__c.field-meta.xml
<CustomField>
    <fullName>TSMTar_FXInDirectPercent__c</fullName>
    <formula>IF(TSMTar_FXIndirectTarget__c!=0, (TSMTar_FXIndirectActual__c / TSMTar_FXIndirectTarget__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FX Indirect Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>