force-app/main/default/objects/TSMTarget__c/fields/TSMTar_FXIndirectTarget__c.field-meta.xml
<CustomField>
    <fullName>TSMTar_FXIndirectTarget__c</fullName>
    <defaultValue>0</defaultValue>
    <label>FX Indirect Target</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>