force-app/main/default/objects/TSMTarget__c/fields/TSMTar_FXTarget__c.field-meta.xml
<CustomField>
    <fullName>TSMTar_FXTarget__c</fullName>
    <formula>TSMTar_FXDirectTarget__c  +  TSMTar_FXIndirectTarget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FX Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>