force-app/main/default/objects/TSMTarget__c/fields/TSMTar_FYEndDate__c.field-meta.xml
<CustomField>
    <fullName>TSMTar_FYEndDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FY End Date</label>
    <type>Date</type>
</CustomField>