force-app/main/default/objects/TSMTarget__c/fields/TSMTar_FYStartDate__c.field-meta.xml
<CustomField>
    <fullName>TSMTar_FYStartDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FY Start Date</label>
    <type>Date</type>
</CustomField>