force-app/main/default/objects/TSMTarget__c/fields/TSMTar_IRRMPercent__c.field-meta.xml
<CustomField>
    <fullName>TSMTar_IRRMPercent__c</fullName>
    <formula>IF(TSMTar_IRRMTarget__c!=0, (TSMTar_IRRMActual__c / TSMTar_IRRMTarget__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IRRM Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>