force-app/main/default/objects/TSMTarget__c/fields/TSMTar_IRRMTargetTillDate__c.field-meta.xml
<CustomField>
    <fullName>TSMTar_IRRMTargetTillDate__c</fullName>
    <defaultValue>0</defaultValue>
    <label>IRRM Target To Date</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>