force-app/main/default/objects/TSMTarget__c/fields/TSMTar_IsCurrentFY__c.field-meta.xml
<CustomField>
    <fullName>TSMTar_IsCurrentFY__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Current FY</label>
    <type>Checkbox</type>
</CustomField>