force-app/main/default/objects/TSMTarget__c/fields/TSMTar_IsFullTermPlan__c.field-meta.xml
<CustomField>
    <fullName>TSMTar_IsFullTermPlan__c</fullName>
    <formula>IF((TSMTar_StartDate__c == TSMTar_FYStartDate__c &amp;&amp; 
TSMTar_EndDate__c == TSMTar_FYEndDate__c), True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Full Term Plan</label>
    <type>Checkbox</type>
</CustomField>