force-app/main/default/objects/TSMTarget__c/fields/TSMTar_LoggedInAsTSM__c.field-meta.xml
<CustomField>
    <fullName>TSMTar_LoggedInAsTSM__c</fullName>
    <formula>IF( $User.Id  =  TSMTar_TSM__c , True, False)</formula>
    <label>Logged In As FRSM</label>
    <type>Checkbox</type>
</CustomField>