force-app/main/default/objects/TSMTarget__c/fields/TSMTar_LoggedInAsTSMManager__c.field-meta.xml
<CustomField>
    <fullName>TSMTar_LoggedInAsTSMManager__c</fullName>
    <formula>IF( $User.Id  =   TSMTar_TSMManager__c  , True, False)</formula>
    <label>Logged In As FRSM Manager</label>
    <type>Checkbox</type>
</CustomField>