force-app/main/default/objects/TSMTarget__c/fields/TSMTar_PseudoTarget__c.field-meta.xml
<CustomField>
    <fullName>TSMTar_PseudoTarget__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retail Plan</label>
    <type>Checkbox</type>
</CustomField>