force-app/main/default/objects/TSMTarget__c/fields/TSMTar_QuickCalls__c.field-meta.xml
<CustomField>
    <fullName>TSMTar_QuickCalls__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Quick Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>