force-app/main/default/objects/TSMTarget__c/fields/TSMTar_StartDate__c.field-meta.xml
<CustomField>
    <fullName>TSMTar_StartDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Plan Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>