force-app/main/default/objects/TSMTarget__c/fields/TSMTar_Team__c.field-meta.xml
<CustomField>
    <fullName>TSMTar_Team__c</fullName>
    <label>Business Centre</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Team status is not active.</errorMessage>
        <filterItems>
            <field>Team__c.Team_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Team__c</referenceTo>
    <relationshipName>TSMTargets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>