force-app/main/default/objects/TSMTarget__c/fields/TSMTar_Terminated__c.field-meta.xml
<CustomField>
    <fullName>TSMTar_Terminated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Terminated</label>
    <type>Checkbox</type>
</CustomField>