force-app/main/default/objects/TSMTarget__c/fields/TSMTar_TerminationDate__c.field-meta.xml
<CustomField>
    <fullName>TSMTar_TerminationDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Termination Date</label>
    <type>Date</type>
</CustomField>