force-app/main/default/objects/TSMTarget__c/fields/TSMTar_TotalWorkingDays__c.field-meta.xml
<CustomField>
    <fullName>TSMTar_TotalWorkingDays__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total # Working Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>