force-app/main/default/objects/TSMTarget__c/fields/TSMTar_TSM__c.field-meta.xml
<CustomField>
    <fullName>TSMTar_TSM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Risk Solutions Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TSMTargets</relationshipName>
    <type>Lookup</type>
</CustomField>