force-app/main/default/objects/TSMTarget__c/fields/TSMTar_TSMLocation__c.field-meta.xml
<CustomField>
    <fullName>TSMTar_TSMLocation__c</fullName>
    <formula>TEXT(TSMTar_TSM__r.Location__c)</formula>
    <label>FRSM Location</label>
    <type>Text</type>
</CustomField>