force-app/main/default/objects/TSMTarget__c/fields/TSMTar_TSMManager__c.field-meta.xml
<CustomField>
    <fullName>TSMTar_TSMManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FRSM&#39;s Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TSMManager</relationshipName>
    <type>Lookup</type>
</CustomField>