force-app/main/default/objects/TSMTarget__c/validationRules/TSMTar_Cannot_select_status_as_inactive.validationRule-meta.xml
<ValidationRule>
    <fullName>TSMTar_Cannot_select_status_as_inactive</fullName>
    <active>true</active>
    <description>User should not able to select status as Inactive</description>
    <errorConditionFormula>NOT($Permission.UpdateTargetsWithClosedInactiveStatus ) &amp;&amp;  (ISPICKVAL( TSMTar_Status__c , &#39;Inactive&#39;) || ISPICKVAL( TSMTar_Status__c , &#39;Ended&#39;)) &amp;&amp;  (ISCHANGED(TSMTar_Status__c) ||  ISNEW() )</errorConditionFormula>
    <errorDisplayField>TSMTar_Status__c</errorDisplayField>
    <errorMessage>Please select the Status as Active/Terminated. Plan will be deactivated at the end of current FY.</errorMessage>
</ValidationRule>