force-app/main/default/objects/TSMTarget__c/validationRules/TSMTar_END_Date_must_chang_on_closure.validationRule-meta.xml
<ValidationRule>
    <fullName>TSMTar_END_Date_must_chang_on_closure</fullName>
    <active>false</active>
    <errorConditionFormula>ISCHANGED( TSMTar_Status__c ) &amp;&amp; TEXT(TSMTar_Status__c) = &#39;Closed&#39; &amp;&amp; NOT(ISCHANGED( TSMTar_EndDate__c ))</errorConditionFormula>
    <errorDisplayField>TSMTar_EndDate__c</errorDisplayField>
    <errorMessage>Please update the end date of the plan.</errorMessage>
</ValidationRule>