force-app/main/default/objects/TSMTarget__c/validationRules/TSMTar_End_Date_Should_be_in_Current_FY.validationRule-meta.xml
<ValidationRule>
    <fullName>TSMTar_End_Date_Should_be_in_Current_FY</fullName>
    <active>true</active>
    <errorConditionFormula>TSMTar_EndDate__c  &lt;  TSMTar_FYStartDate__c  ||   TSMTar_EndDate__c  &gt; TSMTar_FYEndDate__c</errorConditionFormula>
    <errorDisplayField>TSMTar_EndDate__c</errorDisplayField>
    <errorMessage>End Date is not in the current FY.</errorMessage>
</ValidationRule>