force-app/main/default/objects/TSMTarget__c/validationRules/TSMTar_EndDate_Before_StartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>TSMTar_EndDate_Before_StartDate</fullName>
    <active>true</active>
    <errorConditionFormula>IF(TSMTar_EndDate__c &lt; TSMTar_StartDate__c , True, False)</errorConditionFormula>
    <errorDisplayField>TSMTar_EndDate__c</errorDisplayField>
    <errorMessage>End Date cannot be before Start Date</errorMessage>
</ValidationRule>