force-app/main/default/objects/TSMTarget__c/validationRules/TSMTAr_Location_is_Mandatory_on_TSM.validationRule-meta.xml
<ValidationRule>
    <fullName>TSMTAr_Location_is_Mandatory_on_TSM</fullName>
    <active>true</active>
    <description>Location is mandatory on TSM User&#39;s Record</description>
    <errorConditionFormula>ISBLANK(TSMTar_TSMLocation__c )</errorConditionFormula>
    <errorMessage>Location is mandatory on FRSM User&#39;s Record</errorMessage>
</ValidationRule>