force-app/main/default/objects/TSMTarget__c/validationRules/TSMTar_Lockdown_BusinessCentre_On_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>TSMTar_Lockdown_BusinessCentre_On_Update</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!ISNEW(), ISCHANGED(TSMTar_Team__c))</errorConditionFormula>
    <errorDisplayField>TSMTar_Team__c</errorDisplayField>
    <errorMessage>If Business Centre needs to be changed, plan should be closed and re-opened for new Business Centre.</errorMessage>
</ValidationRule>