force-app/main/default/objects/TSMTarget__c/validationRules/TSMTar_Lockdown_TSM_On_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>TSMTar_Lockdown_TSM_On_Update</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!ISNEW(), ISCHANGED(TSMTar_TSM__c))</errorConditionFormula>
    <errorDisplayField>TSMTar_TSM__c</errorDisplayField>
    <errorMessage>If FRSM needs to be changed, plan should be closed and re-opened for new FRSM.</errorMessage>
</ValidationRule>