force-app/main/default/objects/TSMTarget__c/validationRules/TSMTar_Manager_is_Mandatory_on_TSM.validationRule-meta.xml
<ValidationRule>
    <fullName>TSMTar_Manager_is_Mandatory_on_TSM</fullName>
    <active>true</active>
    <description>Manager is mandatory on FRSM User&#39;s Record</description>
    <errorConditionFormula>ISBLANK( TSMTar_TSMManager__c  )</errorConditionFormula>
    <errorMessage>Manager is mandatory on FRSM User&#39;s Record</errorMessage>
</ValidationRule>