force-app/main/default/objects/TSMTarget__c/validationRules/TSMTar_Start_Date_Shoul_be_in_Current_FY.validationRule-meta.xml
<ValidationRule>
    <fullName>TSMTar_Start_Date_Shoul_be_in_Current_FY</fullName>
    <active>true</active>
    <errorConditionFormula>TSMTar_StartDate__c  &lt;  TSMTar_FYStartDate__c  ||  TSMTar_StartDate__c &gt; TSMTar_FYEndDate__c</errorConditionFormula>
    <errorDisplayField>TSMTar_StartDate__c</errorDisplayField>
    <errorMessage>Start Date is not in the current FY.</errorMessage>
</ValidationRule>