force-app/main/default/objects/TSMTarget__c/validationRules/TSMTar_TerDate_Mandatory_for_Termination.validationRule-meta.xml
<ValidationRule>
    <fullName>TSMTar_TerDate_Mandatory_for_Termination</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( TSMTar_Status__c ) &amp;&amp; TEXT(TSMTar_Status__c) = &#39;Terminated&#39; &amp;&amp; (ISBLANK(TSMTar_TerminationDate__c))</errorConditionFormula>
    <errorDisplayField>TSMTar_TerminationDate__c</errorDisplayField>
    <errorMessage>Please provide the Termination Date</errorMessage>
</ValidationRule>