force-app/main/default/objects/TSMTarget__c/validationRules/TSMTar_TerDate_must_within_plan_dates.validationRule-meta.xml
<ValidationRule>
    <fullName>TSMTar_TerDate_must_within_plan_dates</fullName>
    <active>true</active>
    <errorConditionFormula>IF(OR((TSMTar_TerminationDate__c &lt; TSMTar_StartDate__c),
(TSMTar_TerminationDate__c &gt; TSMTar_EndDate__c)), True, False)</errorConditionFormula>
    <errorDisplayField>TSMTar_TerminationDate__c</errorDisplayField>
    <errorMessage>Termination Date should be in between the Plan Start Date and the Plan End Date.</errorMessage>
</ValidationRule>