force-app/main/default/objects/TSMTarget__c/validationRules/TSMTar_TerminatedStatus_For_TerDate.validationRule-meta.xml
<ValidationRule>
    <fullName>TSMTar_TerminatedStatus_For_TerDate</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(TSMTar_TerminationDate__c)  &amp;&amp; (!ISBLANK(TSMTar_TerminationDate__c) &amp;&amp;
!ISPICKVAL(TSMTar_Status__c, &#39;Terminated&#39;))</errorConditionFormula>
    <errorDisplayField>TSMTar_Status__c</errorDisplayField>
    <errorMessage>Please Select the Status as Terminated for Termination Date is provided</errorMessage>
</ValidationRule>