force-app/main/default/objects/TSMTarget__c/validationRules/TSMTar_TerminationDate_Mndtry_TerStatus.validationRule-meta.xml
<ValidationRule>
    <fullName>TSMTar_TerminationDate_Mndtry_TerStatus</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(TSMTar_Status__c)  &amp;&amp; ISPICKVAL(TSMTar_Status__c, &#39;Terminated&#39;) &amp;&amp;  ISBLANK(TSMTar_TerminationDate__c)</errorConditionFormula>
    <errorDisplayField>TSMTar_TerminationDate__c</errorDisplayField>
    <errorMessage>Please provide the Termination Date</errorMessage>
</ValidationRule>