force-app/main/default/objects/TSMTarget__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TSMTar_TSM__c</columns>
    <columns>TSMTar_Team__c</columns>
    <columns>TSMTar_FXDirectTarget__c</columns>
    <columns>TSMTar_FXDirectActual__c</columns>
    <columns>TSMTar_FXIndirectTarget__c</columns>
    <columns>TSMTar_FXIndirectActual__c</columns>
    <columns>TSMTar_CommTarget__c</columns>
    <columns>TSMTar_CommActual__c</columns>
    <columns>TSMTar_IRRMTarget__c</columns>
    <columns>TSMTar_IRRMActual__c</columns>
    <columns>TSMTar_IsCurrentFY__c</columns>
    <filterScope>Everything</filterScope>
    <label>All_</label>
</ListView>