force-app/main/default/objects/TSMTarget__c/listViews/Current_FY.listView-meta.xml
<ListView>
    <fullName>Current_FY</fullName>
    <columns>NAME</columns>
    <columns>TSMTar_CommActual__c</columns>
    <columns>TSMTar_CommTarget__c</columns>
    <columns>TSMTar_CRMActual__c</columns>
    <columns>TSMTar_CRMTarget__c</columns>
    <columns>TSMTar_FXDirectActual__c</columns>
    <columns>TSMTar_FXDirectTarget__c</columns>
    <columns>TSMTar_FXIndirectActual__c</columns>
    <columns>TSMTar_FXIndirectTarget__c</columns>
    <columns>TSMTar_FXRetailActual__c</columns>
    <columns>TSMTar_FXRetail__c</columns>
    <columns>TSMTar_IRRMActual__c</columns>
    <columns>TSMTar_IRRMTarget__c</columns>
    <columns>TSMTar_TotalWorkingDays__c</columns>
    <columns>TSMTar_TSMManager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TSMTar_FiscalYear__c</field>
        <operation>equals</operation>
        <value>FY20</value>
    </filters>
    <label>Current FY</label>
</ListView>