force-app/main/default/objects/TSMTarget__c/listViews/Ended_Plans.listView-meta.xml
<ListView>
    <fullName>Ended_Plans</fullName>
    <columns>TSMTar_TSM__c</columns>
    <columns>TSMTar_Team__c</columns>
    <columns>TSMTar_IsCurrentFY__c</columns>
    <columns>TSMTar_FXDirectTarget__c</columns>
    <columns>TSMTar_FXDirectActual__c</columns>
    <columns>TSMTar_FXIndirectTarget__c</columns>
    <columns>TSMTar_FXIndirectActual__c</columns>
    <columns>TSMTar_CommTarget__c</columns>
    <columns>TSMTar_CommActual__c</columns>
    <columns>TSMTar_IRRMTarget__c</columns>
    <columns>TSMTar_IRRMActual__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TSMTar_IsCurrentFY__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>TSMTar_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>TSMTar_EndDate__c</field>
        <operation>lessOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>Ended Plans</label>
</ListView>