force-app/main/default/objects/TSMTarget__c/listViews/FY19_TSM_Plans.listView-meta.xml
<ListView>
    <fullName>FY19_TSM_Plans</fullName>
    <columns>NAME</columns>
    <columns>TSMTar_TSM__c</columns>
    <columns>TSMTar_Team__c</columns>
    <columns>TSMTar_FXDirectActual__c</columns>
    <columns>TSMTar_FXDirectTarget__c</columns>
    <columns>TSMTar_FXIndirectActual__c</columns>
    <columns>TSMTar_FXIndirectTarget__c</columns>
    <columns>TSMTar_CommActual__c</columns>
    <columns>TSMTar_CommTarget__c</columns>
    <columns>TSMTar_IRRMActual__c</columns>
    <columns>TSMTar_IRRMTarget__c</columns>
    <columns>TSMTar_PseudoTarget__c</columns>
    <columns>TSMTar_WorkingDays__c</columns>
    <columns>TSMTar_TotalWorkingDays__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TSMTar_FiscalYear__c</field>
        <operation>equals</operation>
        <value>FY19</value>
    </filters>
    <label>FY19 TSM Plans</label>
</ListView>